packages/clippier/tests/snapshots/command_tests__api_clippier_toml.snap
---
source: packages/clippier/tests/command_tests.rs
expression: api_clippier
---
[env]
API_PORT     = "3000"
DATABASE_URL = { value = "sqlite://test.db", features = ["database"] }

[[config]]
os = "ubuntu"

[[config.dependencies]]
command  = "apt-get update && apt-get install -y libsqlite3-dev"
features = ["database"]

[[config.dependencies]]
command = "apt-get update && apt-get install -y build-essential"

[[config]]
os = "windows"

[[config.dependencies]]
command  = "vcpkg install sqlite3:x64-windows"
features = ["database"]

[config.env]
BIND_ADDR = "127.0.0.1"

[[config]]
os = "macos"

[[config.dependencies]]
command  = "brew install sqlite3"
features = ["database"]
