packages/clippier/tests/snapshots/command_tests__basic_workspace_structure.snap
---
source: packages/clippier/tests/command_tests.rs
expression: "format!(\"{:?}\",\nstd::fs::read_dir(temp_dir.path().join(\"packages\")).unwrap().map(|entry|\nentry.unwrap().file_name().to_string_lossy().to_string()).sorted().collect::<Vec<_>>())"
---
["api", "client", "models"]
