packages/clippier/tests/snapshots/command_tests__cli_feature_filtering.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: cli
all_features:
  - interactive
  - batch
skip_features:
  - batch
filtered_features:
  - interactive
