packages/clippier/tests/snapshots/command_tests__complex_api_config.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: api
os: ubuntu
has_clippier_toml: true
expected_env_vars:
  - API_PORT
  - DATABASE_URL
expected_deps:
  - libsqlite3-dev
  - build-essential
