packages/clippier/tests/snapshots/command_tests__feature_limits.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: web
all_features:
  - frontend
  - ssr
offset_1_max_1:
  - ssr
offset_0_max_1:
  - frontend
