packages/clippier/tests/snapshots/command_tests__git_submodules_multiple_os.snap
---
source: packages/clippier/tests/command_tests.rs
expression: result
---
- os: ubuntu
  path: "[TEMP_PATH]"
  name: with-submodules
  features:
    - default
    - feature-a
    - feature-b
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: macos
  path: "[TEMP_PATH]"
  name: with-submodules
  features:
    - default
    - feature-a
    - feature-b
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
- os: windows
  path: "[TEMP_PATH]"
  name: with-submodules
  features:
    - default
    - feature-a
    - feature-b
  requiredFeatures: ~
  nightly: false
  gitSubmodules: true
