packages/clippier/tests/snapshots/command_tests__multiple_os_configs.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: api
supported_os:
  - ubuntu
  - windows
  - macos
ubuntu_deps:
  - apt-get install libsqlite3-dev
windows_deps:
  - "vcpkg install sqlite3:x64-windows"
macos_deps:
  - brew install sqlite3
