packages/clippier/tests/snapshots/command_tests__spread_distribution.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: api
chunked: 2
spread: true
features:
  - server
  - database
expected_chunks:
  - - server
  - - database
