packages/clippier/tests/snapshots/command_tests__web_chunked_features.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: web
chunked: 2
features:
  - frontend
  - ssr
