packages/clippier/tests/snapshots/command_tests__web_env_vars.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: web
env_vars:
  WEB_PORT: "8080"
  FRONTEND_BUILD:
    value: production
    features:
      - frontend
  SSR_ENABLED: "true"
