packages/clippier/tests/snapshots/command_tests__workspace_fallback.snap
---
source: packages/clippier/tests/command_tests.rs
expression: test_data
---
package_name: models
has_clippier_toml: false
fallback_os: ubuntu
fallback_features: []
